.archive/kubernetes/thanos/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: thanos
  namespace: observability
spec:
  hosts:
    - 'thanos.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 9090
            host: thanos-query.observability.svc.cluster.local
